[package]
name = "twilio"
version = "1.1.0"
description = "Rust bindings for the Twilio API"
readme = "README.md"
repository = "https://github.com/neil-lobracco/twilio-rs"
license = "MIT"
authors = [
    "Neil LoBracco <neil.lobracco@gmail.com>",
    "Lance Carlson <lancecarlson@gmail.com>",
    "Troels F. Rønnow <troels@wonop.com>",
]
keywords = ["twilio", "rust"]
edition = "2018"

[dependencies]
base64 = "0.12"
headers = "0.3.2"
hyper = { version = "0.14", features = ["client", "http1", "http2"] }
hyper-tls = { version = "0.5", optional = true }
hyper-rustls = { version = "0.25", optional = true }
mime = "0.3"
serde = { version = "1.0.10", features = ["derive"] }
serde_json = "1.0.2"
sha1 = "0.10"
hmac = "0.12"
url = "2.0"

[dev-dependencies]
dotenv = "0.15"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "test-util"] }
hyper = { version = "0.14", features = ["server"] }

[features]
default = ["default-tls"]
default-tls = ["dep:hyper-tls"]
rustls = ["dep:hyper-rustls"]
